Add placeholder page for dictionary

--- a/dictionary.html
+++ b/dictionary.html
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <div xmlns:i18n="http://exist-db.org/xquery/i18n" data-template="templates:surround" data-template-with="templates/template_lemmata.html" data-template-at="content">
     <div data-template="i18n:translate" data-template-catalogues="data/i18n">
         <div class="container">
@@ -45,9 +44,16 @@
                         </div>
                     </noscript>
                 </div>
-                <script type="text/javascript">
+                <!--<script type="text/javascript">
                     var lemmata_items = [  <span data-template="app:LEMfinalFacets"/> ];
-                </script>
+                </script>-->
+            </div>
+            <div class="col-md-9">
+                <img src="resources/img/slider/dict.jpg"/><p class="lead"/>
+                <p class="lead" style="text-align: justify">
+                    <i18n:text key="dictUnderConstruction">Hier entsteht das Wörterbuch der juristisch-politischen Sprache der Schule von Salamanca: ca. 200 Artikel mit lateinischen und spanischen Lemmata, den Quellen selbst entnommen. 
+                        Die Artikel werden voraussichtlich ab 2019 sukzessive veröffentlicht.</i18n:text>
+                </p>
             </div>
         </div>
     </div>
