Enable dictionary in index.html

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                         <i18n:text key="introWorks">Digitale Quellensammlung mit 116 Werken. Transkribiert gemäß unserer</i18n:text> <span data-template="config:langEdGuidelines"/>.
                     </p>
                 </div>
-                <!--<div class="col-sm-12 col-md-4" style="padding-top: 2%">
+                <div class="col-sm-12 col-md-4" style="padding-top: 2%">
                     <h2 class="text-center">
                         <a data-template="config:langDictionary"/>
                     </h2>
                     <p class="bigger text-center">
                         <i18n:text key="introDict">zur juristisch-politischen Sprache der Schule von Salamanca.</i18n:text>
                     </p>
-                </div>-->
+                </div>
                 <div class="col-sm-12 col-md-4" style="padding-top: 2%">
                     <h2 class="text-center">
                         <a data-template="config:langAuthors"/>
