--- a/works.html
+++ b/works.html
@@ -34,7 +34,7 @@
                         <a href="resources/files/sal-tei-corpus.zip">
                             <i18n:text key="download">Download</i18n:text>
                         </a>
-                        <i18n:text key="corpus"/>
+                        <i18n:text key="corpusVerb"/>
                     </p>
                 </div>
                 <div class="col-md-9" id="results" style="padding-top: 5%">
