Add explanation notes to works and authors pages

--- a/authors.html
+++ b/authors.html
@@ -23,6 +23,11 @@
                 </span>
                 <hr/>
             </h2>
+            <div style="margin-bottom:1em;border:1px solid gray;border-radius:5px;">
+                <div style="font-size:1em;padding:0.2em;text-align:justify">
+                    <i18n:text key="authorsNotice"/>
+                </div>
+            </div>
             <div class="row" data-template="app:loadListOfAuthors">
                 <div class="col-md-3 hidden-xs hidden-sm">
                     <ul class="fadeIn" id="facets" style="padding-top: 20%; padding-left: 5%"/>
