--- a/works.html
+++ b/works.html
@@ -22,6 +22,7 @@
                 </span>
                 <hr/>
             </h2>
+            <div style="margin-bottom:1em;border:1px solid gray;border-radius:5px;" data-template="app:WRKsNotice"/>
             <!--<div class="row" data-template="app:loadListOfWorks">-->
             <div class="row">
                 <div class="col-md-3 hidden-xs hidden-sm">
