--- a/works.html
+++ b/works.html
@@ -22,6 +22,7 @@
                 </span>
                 <hr/>
             </h2>
+            <div style="margin-bottom:1em;border:1px solid gray;border-radius:5px;" data-template="app:WRKsNotice"/>
             <!--<div class="row" data-template="app:loadListOfWorks">-->
             <div class="row">
                 <div class="col-md-3 hidden-xs hidden-sm">
@@ -30,12 +31,6 @@
                     <noscript>
                         <div style="margin-top: -13%;" data-template="app:sortWRK"/>
                     </noscript>
-                    <p id="corpusdownloadparagraph">
-                        <a href="resources/files/sal-tei-corpus.zip">
-                            <i18n:text key="download">Download</i18n:text>
-                        </a>
-                        <i18n:text key="corpusVerb"/>
-                    </p>
                 </div>
                 <div class="col-md-9" id="results" style="padding-top: 5%">
                     <!-- show this when js is disabled -->
