Beautify corpus download field

--- a/works.html
+++ b/works.html
@@ -31,8 +31,9 @@
                     <noscript>
                         <div style="margin-top: -13%;" data-template="app:sortWRK"/>
                     </noscript>
-                    <p id="corpusdownloadparagraph">
+                    <p id="corpusdownloadparagraph" style="padding:0.5em;border:1px solid lightgray;border-radius:3px;">
                         <a href="resources/files/sal-tei-corpus.zip">
+                            <span class="glyphicon glyphicon-download-alt"/>
                             <i18n:text key="download">Download</i18n:text>
                         </a>
                         <i18n:text key="corpusVerb"/>
