Adjust xconfig.xqm filename

--- a/services/lod/changelog.html
+++ b/services/lod/changelog.html
@@ -13,7 +13,7 @@
                     <ul>
                         <li>FEATURE: Allow XPATH/XQuery expressions in &lt;statement repeat="{XPATH}"&gt; to dynamically generate an integer count for $repeatIndex</li>
                         <li>FEATURE: Removed absolute links from HTML pages. Now all examples fully work in local contexts</li>
-                        <li>CHANGE: Put the service configuration (URLs to XTriples, any23, rdf2svg) into config.xqm; extract.xql now does not need to get touched when configuring the service in local or other contexts</li>
+                        <li>CHANGE: Put the service configuration (URLs to XTriples, any23, rdf2svg) into xconfig.xqm; extract.xql now does not need to get touched when configuring the service in local or other contexts</li>
                         <li>BUGFIX: Correctly escaped some regex expressions in extractTriples function</li>
                     </ul>
                     <h3>1.2.1</h3>
