--- a/project.html
+++ b/project.html
@@ -15,7 +15,7 @@
                         <hr class="half-rule"/>
                     </div>
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <h3 class="text-center">
                                 <a data-template="config:langContact"/>
                             </h3>
@@ -23,17 +23,15 @@
                                 <i18n:text key="contactDesc">Anmerkungen, Rückmeldungen, Kritik.</i18n:text>
                             </p>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <h3 class="text-center">
                                 <a data-template="config:langEdGuidelines"/>
                             </h3>
                             <p class="bigger text-center">
-                                <i18n:text key="guidelinesDecl">Welches TEI-Markup wir verwenden.</i18n:text>
+                                <i18n:text key="guidelinesDecl"/>
                             </p>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <h3 class="text-center">
                                 <a data-template="config:langWPcreation"/>
                             </h3>
@@ -41,12 +39,30 @@
                                 <i18n:text key="wpCreateDecl">Hinweise zu Erstellung und Einreichung eines Working Papers.</i18n:text>
                             </p>
                         </div>
-                        <div class="col-md-6">
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
                             <h3 class="text-center">
                                 <a data-template="config:langProjektteam"/>
                             </h3>
                             <p class="bigger text-center">
                                 <i18n:text key="teamDesc">Profile der Mitarbeitenden auf den Seiten der Akademie der Wissenschaften und der Literatur, Mainz.</i18n:text>
+                            </p>
+                        </div>
+                        <div class="col-md-4">
+                            <h3 class="text-center">
+                                <a data-template="config:langSourceCode"/>
+                            </h3>
+                            <p class="bigger text-center">
+                                <i18n:text key="sourceCodeDecl">Der Programmcode dieser Webanwendung im externen GitHub-Repositorium.</i18n:text>
+                            </p>
+                        </div>
+                        <div class="col-md-4">
+                            <h3 class="text-center">
+                                <a data-template="config:langLegal"/>
+                            </h3>
+                            <p class="bigger row text-center">
+                                <i18n:text key="legalDesc">Datenschutz &amp; Impressum</i18n:text>
                             </p>
                         </div>
                     </div>
