--- a/legal.html
+++ b/legal.html
@@ -22,6 +22,7 @@
                         </span>
                         <hr/>
                     </h2>
+                    <div id="disclaimer" title="LegalDisclaimer" data-template="app:legalDisclaimer"/>
                     <div id="privacy" title="PrivacyPolicy">
                         <div data-template="app:privDecl"/>
                     </div>
