Refactor catalogue record creation.

--- a/workDetails.html
+++ b/workDetails.html
@@ -3,30 +3,15 @@
         <div data-template="i18n:translate" data-template-catalogues="data/i18n">
             <div class="container" data-template="app:loadSingleWork">
                 <h2 style="margin-top: 3%" class="hidden-md hidden-sm hidden-xs">
-                    <span>
-                        <span class="text-muted" data-template="app:WRKtitleShort"/>
-                    </span>
-                    <span class="text-muted" data-template="app:WRKtype"/>
-                    <hr/>
+                    <span class="text-muted" data-template="app:WRKcatRecordTitle"/>
                 </h2>
                 <h2 style="margin-top: 2%" class="hidden-lg hidden-sm hidden-xs">
-                    <span>
-                        <span class="text-muted" data-template="app:WRKtitleShort"/>
-                    </span>
-                    <span class="text-muted" data-template="app:WRKtype"/>
-                    <hr/>
+                    <span class="text-muted" data-template="app:WRKcatRecordTitle"/>
                 </h2>
                 <h2 class="hidden-lg hidden-md">
-                    <span>
-                        <span class="text-muted" data-template="app:WRKtitleShort"/>
-                    </span>
-                    <span class="text-muted" data-template="app:WRKtype"/>
-                    <hr/>
+                    <span class="text-muted" data-template="app:WRKcatRecordTitle"/>
                 </h2>
-                <div class="row-fluid">
-                    <span data-template="app:WRKdigitalEditionRecord"/>
-                </div>
-                <span data-template="app:sourceBibliographicalRecord"/>
+                <div data-template="app:WRKcatRecord"/>
             </div>
         </div>
     </div>
