Update templates to Fontawesome 5.7.2, and minor icon changes.

--- a/workingPaper.html
+++ b/workingPaper.html
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <div data-template="app:loadSingleWp">
     <div xmlns:i18n="http://exist-db.org/xquery/i18n" data-template="templates:surround" data-template-with="templates/template_basic.html" data-template-at="content">
         <div data-template="i18n:translate" data-template-catalogues="data/i18n">
@@ -6,7 +5,7 @@
                 <h2 style="margin-top: 3%" class="hidden-md hidden-sm hidden-xs">
                     <span class="text-muted">
                         <span data-template="app:WPgoBack"/>
-                        <i class="fa fa-pencil" aria-hidden="true"/>
+                        <i class="fa fa-pencil-alt" aria-hidden="true"/>
                         <i18n:text key="WpIntroTitle">Salamanca Working Papers Series (ISSN 2509-5080)</i18n:text>, <span data-template="app:WPvolNoLink"/>
                     </span>
                     <hr/>
@@ -14,7 +13,7 @@
                 <h2 style="margin-top: 2%" class="hidden-lg hidden-sm hidden-xs">
                     <span class="text-muted">
                         <span data-template="app:WPgoBack"/>
-                        <i class="fa fa-pencil" aria-hidden="true"/>
+                        <i class="fa fa-pencil-alt" aria-hidden="true"/>
                         <i18n:text key="WpIntroTitle">Salamanca Working Papers Series (ISSN 2509-5080)</i18n:text>, <span data-template="app:WPvolNoLink"/>
                     </span>
                     <hr/>
@@ -22,7 +21,7 @@
                 <h2 class="hidden-lg hidden-md">
                     <span class="text-muted">
                         <span data-template="app:WPgoBack"/>
-                        <i class="fa fa-pencil" aria-hidden="true"/>
+                        <i class="fa fa-pencil-alt" aria-hidden="true"/>
                         <i18n:text key="WpIntroTitle">Salamanca Working Papers Series (ISSN 2509-5080)</i18n:text>, <span data-template="app:WPvolNoLink"/>
                     </span>
                     <hr/>
@@ -39,7 +38,7 @@
                         <br/>
                         <br/>
                         <h4>
-                           <!-- <i18n:text key="abstract">Abstract</i18n:text>-->
+                            <!-- <i18n:text key="abstract">Abstract</i18n:text>-->
                             Abstract
                         </h4>
                         <span data-template="app:WPabstract"/>
