--- a/workingPapers.html
+++ b/workingPapers.html
@@ -3,19 +3,19 @@
         <div class="container">
             <h2 style="margin-top: 3%" class="hidden-md hidden-sm hidden-xs">
                 <span class="text-muted">
-                    <i class="fa fa-pencil-alt" aria-hidden="true"/>
+                    <i class="fas fa-pencil-alt" aria-hidden="true"/>
                     <i18n:text key="WpIntroTitle">Salamanca Working Paper Series (ISSN 2509-5080)</i18n:text>
                 </span>
             </h2>
             <h2 style="margin-top: 2%" class="hidden-lg hidden-sm hidden-xs">
                 <span class="text-muted">
-                    <i class="fa fa-pencil-alt" aria-hidden="true"/>
+                    <i class="fas fa-pencil-alt" aria-hidden="true"/>
                     <i18n:text key="WpIntroTitle">Salamanca Working Paper Series (ISSN 2509-5080)</i18n:text>
                 </span>
             </h2>
             <h2 class="hidden-lg hidden-md">
                 <span class="text-muted">
-                    <i class="fa fa-pencil-alt" aria-hidden="true"/>
+                    <i class="fas fa-pencil-alt" aria-hidden="true"/>
                     <i18n:text key="WpIntroTitle">Salamanca Working Paper Series (ISSN 2509-5080)</i18n:text>
                 </span>
             </h2>
