--- a/workingPaper.html
+++ b/workingPaper.html
@@ -5,7 +5,7 @@
                 <h2 style="margin-top: 3%" class="hidden-md hidden-sm hidden-xs">
                     <span class="text-muted">
                         <span data-template="app:WPgoBack"/>
-                        <i class="fa fa-pencil-alt" aria-hidden="true"/>
+                        <i class="fas fa-pencil-alt" aria-hidden="true"/>
                         <i18n:text key="WpIntroTitle">Salamanca Working Papers Series (ISSN 2509-5080)</i18n:text>, <span data-template="app:WPvolNoLink"/>
                     </span>
                     <hr/>
@@ -13,7 +13,7 @@
                 <h2 style="margin-top: 2%" class="hidden-lg hidden-sm hidden-xs">
                     <span class="text-muted">
                         <span data-template="app:WPgoBack"/>
-                        <i class="fa fa-pencil-alt" aria-hidden="true"/>
+                        <i class="fas fa-pencil-alt" aria-hidden="true"/>
                         <i18n:text key="WpIntroTitle">Salamanca Working Papers Series (ISSN 2509-5080)</i18n:text>, <span data-template="app:WPvolNoLink"/>
                     </span>
                     <hr/>
@@ -21,7 +21,7 @@
                 <h2 class="hidden-lg hidden-md">
                     <span class="text-muted">
                         <span data-template="app:WPgoBack"/>
-                        <i class="fa fa-pencil-alt" aria-hidden="true"/>
+                        <i class="fas fa-pencil-alt" aria-hidden="true"/>
                         <i18n:text key="WpIntroTitle">Salamanca Working Papers Series (ISSN 2509-5080)</i18n:text>, <span data-template="app:WPvolNoLink"/>
                     </span>
                     <hr/>
