Add subpage for list of sources (resolves #22).

--- a/project.html
+++ b/project.html
@@ -107,6 +107,17 @@
                             Salamanca für politische Theorie und Recht in der Moderne auf eine neue Grundlage gestellt.
                         </i18n:text>
                     </p>
+                    <hr class="half-rule"/>
+                    <div>
+                        <h2 class="bs-docs-featurette-title">
+                            <i18n:text key="furtherInformationTitle">Further Information</i18n:text>
+                        </h2>
+                        <div style="padding-bottom:3em;">
+                            <h3>
+                                <a data-template="config:langSources"/>
+                            </h3>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-2"/>
             </div>
