--- a/works.html
+++ b/works.html
@@ -33,6 +33,7 @@
                     </noscript>
                     <div class="corpus-download">
                         <span data-template="app:WRKsCorpusDownload"/>
+                        <span data-template="app:WRKsList"/>
                     </div>
                 </div>
                 <div class="col-md-9" id="results" style="padding-top: 5%">
