Minor icon changes (sources vs. works)

--- a/sources.html
+++ b/sources.html
@@ -4,21 +4,21 @@
             <div class="container">
                 <h2 style="margin-top: 3%" class="hidden-md hidden-sm hidden-xs">
                     <span class="text-muted">
-                        <i class="fas fa-list" aria-hidden="true"/>
+                        <i class="fas fa-th-list" aria-hidden="true"/>
                         <i18n:text key="worksListOverview">Overview of Works in the Digital Collection of Sources</i18n:text>
                     </span>
                     <hr/>
                 </h2>
                 <h2 style="margin-top: 2%" class="hidden-lg hidden-sm hidden-xs">
                     <span class="text-muted">
-                        <i class="fas fa-list" aria-hidden="true"/>
+                        <i class="fas fa-th-list" aria-hidden="true"/>
                         <i18n:text key="worksListOverview">Overview of Works in the Digital Collection of Sources</i18n:text>
                     </span>
                     <hr/>
                 </h2>
                 <h2 class="hidden-lg hidden-md">
                     <span class="text-muted">
-                        <i class="fas fa-list" aria-hidden="true"/>
+                        <i class="fas fa-th-list" aria-hidden="true"/>
                         <i18n:text key="worksListOverview">Overview of Works in the Digital Collection of Sources</i18n:text>
                     </span>
                     <hr/>
