Renamings and reformatings

--- a/sources.html
+++ b/sources.html
@@ -30,13 +30,13 @@
                 <div class="col-md-4">
                     <div>
                         <div class="panel-group" id="accordion" role="tablist" style="margin-top:1em;">
-                            <span data-template="app:tocWorksList"/>
+                            <span data-template="app:tocSourcesList"/>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-8">
                     <div>
-                        <span data-template="app:worksList"/>
+                        <span data-template="app:sourcesList"/>
                     </div>
                 </div>
             </div>
