--- a/workDetails.html
+++ b/workDetails.html
@@ -1,7 +1,7 @@
-<div data-template="app:loadSingleWork">
+<div data-template="app:loadWorkMetadata">
     <div xmlns:i18n="http://exist-db.org/xquery/i18n" data-template="templates:surround" data-template-with="templates/template_basic.html" data-template-at="content">
         <div data-template="i18n:translate" data-template-catalogues="data/i18n">
-            <div class="container" data-template="app:loadSingleWork">
+            <div class="container" data-template="app:loadWorkMetadata">
                 <h2 style="margin-top: 3%" class="hidden-md hidden-sm hidden-xs">
                     <span class="text-muted" data-template="app:WRKcatRecordTitle"/>
                 </h2>
