--- a/error-page.html
+++ b/error-page.html
@@ -1,6 +1,8 @@
 <div xmlns:i18n="http://exist-db.org/xquery/i18n" class="templates:surround?with=templates/template_error.html&amp;at=content">
     <div data-template="i18n:translate" data-template-catalogues="data/i18n">
         <h1 class="error-title"><span data-template="app:errorCode"/></h1>
-        <div><span data-template="app:errorInformation"/></div>
+        <h2 class="error-title"><span data-template="app:errorTitle"/></h2>
+        <p class="error-paragraph"><span data-template="app:errorInformation"/></p>
+        <div data-template="app:serverErrorMessage"/>
     </div>
 </div>
