--- a/participants.html
+++ b/participants.html
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <div data-template="app:projectTeam"/>
+                    <div data-template="app:participantsBody"/>
                 </div>
             </div>
         </div>
