Adjust link and description in project.html

--- a/project.html
+++ b/project.html
@@ -46,7 +46,7 @@
                                 <a data-template="config:langProjektteam"/>
                             </h3>
                             <p class="bigger text-center">
-                                <i18n:text key="teamDesc">Profile der Mitarbeitenden auf den Seiten der Akademie der Wissenschaften und der Literatur, Mainz.</i18n:text>
+                                <i18n:text key="teamDesc">Profile der Mitarbeitenden; Kooperationen und Fachbeirat.</i18n:text>
                             </p>
                         </div>
                         <div class="col-md-4">
