--- a/editorialWorkingPapers.html
+++ b/editorialWorkingPapers.html
@@ -28,20 +28,20 @@
                         <i18n:text key="WpIntro">Die Salamanca Working Papers Series ist eine interdisziplinäre
                             Reihe von Beiträgen, die Themen aus den philosophischen, juristischen und theologischen
                             Wissenschaften bearbeiten. Die Reihe begleitet die Projektarbeit, ist aber auch für
-                            externe Beiträge offen. Eingereichte Beiträge durchlaufen ein double blind peer
+                            externe Beiträge offen. Eingereichte Beiträge durchlaufen ein peer
                             review-Verfahren. Gern nehmen wir Vorschläge unter dieser Adresse entgegen:</i18n:text>
-                            <span data-template="app:contactEMailHTML"/>
+                        <span data-template="app:contactEMailHTML"/>
                     </span>
                 </div>
             </div>
             <br/>
-            <div class="row">
+            <!--<div class="row">
                 <div class="col-md-8">
                     <p class="lead">
                         <i18n:text key="WpGuidelinesDelayed">Weitere Hinweise für Autoren folgen in Kürze.</i18n:text>
                     </p>
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
 </div>
