Basic functionality for calculating stats

--- a/works.html
+++ b/works.html
@@ -36,6 +36,9 @@
                         <hr/>
                         <span data-template="app:WRKsList"/>
                     </div>
+                    <div class="corpus-stats">
+                        <span data-template="app:corpusStats"/>
+                    </div>
                 </div>
                 <div class="col-md-9" id="results" style="padding-top: 5%">
                     <!-- show this when js is disabled -->
