Show basic stats in works overview

--- a/works.html
+++ b/works.html
@@ -32,12 +32,14 @@
                         <div style="margin-top: -13%;" data-template="app:sortWRK"/>
                     </noscript>
                     <div class="corpus-download">
+                        <h4>
+                            <i18n:text key="aboutCorpus">About the Corpus</i18n:text>
+                        </h4>
+                        <span data-template="app:corpusStats"/>
+                        <hr/>
                         <span data-template="app:WRKsCorpusDownload"/>
                         <hr/>
                         <span data-template="app:WRKsList"/>
-                    </div>
-                    <div class="corpus-stats">
-                        <span data-template="app:corpusStats"/>
                     </div>
                 </div>
                 <div class="col-md-9" id="results" style="padding-top: 5%">
