Display comprehensive corpus stats in main stats page

--- a/stats.html
+++ b/stats.html
@@ -2,8 +2,11 @@
     <div class="container" data-template="i18n:translate" data-template-catalogues="data/i18n">
         <div class="page-header">
             <h1>
-                <i18n:text key="stats">Statistiken</i18n:text>
+                <i18n:text key="stats">Statistics</i18n:text>
             </h1>
+        </div>
+        <div>
+            <div data-template="app:corpusStats"></div>
         </div>
         <div class="row" data-template="stats:loadListOfLemmata">
             <h2 class="featurette-heading">Frequenzen und Kookurrenzen der Lemmata</h2>
