--- a/works.html
+++ b/works.html
@@ -35,7 +35,7 @@
                         <h4>
                             <i18n:text key="aboutCorpus">About the Corpus</i18n:text>
                         </h4>
-                        <span data-template="app:corpusStats"/>
+                        <span data-template="app:corpusStatsTeaser"/>
                         <hr/>
                         <span data-template="app:WRKsCorpusDownload"/>
                         <hr/>
