Display top 20 lemmata in corpus stats overview

--- a/stats.html
+++ b/stats.html
@@ -2,14 +2,14 @@
     <div class="container" data-template="i18n:translate" data-template-catalogues="data/i18n">
         <div class="page-header">
             <h1>
-                <i18n:text key="stats">Statistics</i18n:text>
+                <span data-template="stats:HTMLTitle"/>
             </h1>
         </div>
-        <div>
-            <div data-template="app:corpusStats"></div>
-        </div>
         <div class="row" data-template="stats:loadListOfLemmata">
-            <h2 class="featurette-heading">Frequenzen und Kookurrenzen der Lemmata</h2>
+            <div class="row">
+                <div data-template="stats:HTMLbody"/>
+            </div>
+            <!--<h2 class="featurette-heading">Frequenzen und Kookurrenzen der Lemmata</h2>
             <div class="row">
                 <p>
                     <span data-template="stats:lemmaCount">0</span> lemmata found.</p>
@@ -18,7 +18,7 @@
                         <td colspan="2" data-template="stats:singleLemmaStats">boing</td>
                     </tr>
                 </table>
-            </div>
+            </div>-->
         </div>
     </div>
 </div>
