--- a/stats.html
+++ b/stats.html
@@ -1,7 +1,7 @@
 <div xmlns:i18n="http://exist-db.org/xquery/i18n" data-template="templates:surround" data-template-with="templates/template_basic.html" data-template-at="content">
     <div class="container" data-template="i18n:translate" data-template-catalogues="data/i18n">
         <div class="page-header">
-            <h1>
+            <h1><span class="glyphicon glyphicon-stats" aria-hidden="true"/>
                 <span data-template="stats:HTMLTitle"/>
             </h1>
         </div>
