--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <div xmlns:i18n="http://exist-db.org/xquery/i18n" data-template="templates:surround" data-template-with="templates/template_index.html" data-template-at="content">
     <div data-template="i18n:translate" data-template-catalogues="data/i18n">
         <header id="myCarousel" class="carousel slide hidden-xs">
-            <span data-template="config:carousel"/>
+            <span data-template="gui:carousel"/>
             <noscript>
                 <br/>
                 <p class="label label-warning">Javascript disabled.</p>
@@ -20,15 +20,15 @@
                 </div>
                 <div class="col-sm-12 col-md-4" style="padding-top: 2%">
                     <h2 class="text-center">
-                        <a data-template="config:langWorks"/>
+                        <a data-template="gui:langWorks"/>
                     </h2>
                     <p class="bigger text-center">
-                        <i18n:text key="introWorks">Digitale Quellensammlung mit 116 Werken. Transkribiert gemäß unserer</i18n:text> <span data-template="config:langEdGuidelines"/>.
+                        <i18n:text key="introWorks">Digitale Quellensammlung mit 116 Werken. Transkribiert gemäß unserer</i18n:text> <span data-template="gui:langEdGuidelines"/>.
                     </p>
                 </div>
                 <div class="col-sm-12 col-md-4" style="padding-top: 2%">
                     <h2 class="text-center">
-                        <a data-template="config:langDictionary"/>
+                        <a data-template="gui:langDictionary"/>
                     </h2>
                     <p class="bigger text-center">
                         <i18n:text key="introDict">zur juristisch-politischen Sprache der Schule von Salamanca.</i18n:text>
@@ -36,7 +36,7 @@
                 </div>
                 <div class="col-sm-12 col-md-4" style="padding-top: 2%">
                     <h2 class="text-center">
-                        <a data-template="config:langAuthors"/>
+                        <a data-template="gui:langAuthors"/>
                     </h2>
                     <p class="bigger text-center">
                         <i18n:text key="introAuthors">Biografische und bibliografische Informationen zu den in der Quellensammlung vertretenen Autoren.</i18n:text>
@@ -47,7 +47,7 @@
             <div class="row">
                 <div class="col-sm-12 col-md-4" style="padding-top: 2%">
                     <h2 class="text-center">
-                        <a data-template="config:langSearch"/>
+                        <a data-template="gui:langSearch"/>
                     </h2>
                     <p class="bigger text-center">
                         <i18n:text key="introSearch">Suche in der Quellensammlung, im Wörterbuch, in den biografischen Informationen und in den Working Papers.</i18n:text>
@@ -55,7 +55,7 @@
                 </div>
                 <div class="col-sm-12 col-md-4" style="padding-top: 2%">
                     <h2 class="text-center">
-                        <a data-template="config:langWorkingPapers"/>
+                        <a data-template="gui:langWorkingPapers"/>
                     </h2>
                     <p class="bigger text-center">
                         <i18n:text key="introWorkingPapers">Beiträge der projekteigenen Working Paper Series.</i18n:text>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col-sm-12 col-md-4" style="padding-top: 2%">
                     <h2 class="text-center">
-                        <a data-template="config:langPrDesc"/>
+                        <a data-template="gui:langPrDesc"/>
                     </h2>
                     <p class="bigger text-center">
                         <i18n:text key="introProject">Mitarbeiter, Projektbeschreibung, Kontakt und Impressum.</i18n:text>
