--- a/project.html
+++ b/project.html
@@ -17,7 +17,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <h3 class="text-center">
-                                <a data-template="config:langContact"/>
+                                <a data-template="gui:langContact"/>
                             </h3>
                             <p class="bigger row text-center">
                                 <i18n:text key="contactDesc">Anmerkungen, Rückmeldungen, Kritik.</i18n:text>
@@ -25,7 +25,7 @@
                         </div>
                         <div class="col-md-4">
                             <h3 class="text-center">
-                                <a data-template="config:langEdGuidelines"/>
+                                <a data-template="gui:langEdGuidelines"/>
                             </h3>
                             <p class="bigger text-center">
                                 <i18n:text key="guidelinesDecl"/>
@@ -33,7 +33,7 @@
                         </div>
                         <div class="col-md-4">
                             <h3 class="text-center">
-                                <a data-template="config:langWPcreation"/>
+                                <a data-template="gui:langWPcreation"/>
                             </h3>
                             <p class="bigger row text-center">
                                 <i18n:text key="wpCreateDecl">Hinweise zu Erstellung und Einreichung eines Working Papers.</i18n:text>
@@ -43,7 +43,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <h3 class="text-center">
-                                <a data-template="config:langProjektteam"/>
+                                <a data-template="gui:langProjectTeam"/>
                             </h3>
                             <p class="bigger text-center">
                                 <i18n:text key="teamDesc">Profile der Mitarbeitenden; Kooperationen und Fachbeirat.</i18n:text>
@@ -51,7 +51,7 @@
                         </div>
                         <div class="col-md-4">
                             <h3 class="text-center">
-                                <a data-template="config:langSourceCode"/>
+                                <a data-template="gui:langSourceCode"/>
                             </h3>
                             <p class="bigger text-center">
                                 <i18n:text key="sourceCodeDecl">Der Programmcode dieser Webanwendung im externen GitHub-Repositorium.</i18n:text>
@@ -59,7 +59,7 @@
                         </div>
                         <div class="col-md-4">
                             <h3 class="text-center">
-                                <a data-template="config:langLegal"/>
+                                <a data-template="gui:langLegal"/>
                             </h3>
                             <p class="bigger row text-center">
                                 <i18n:text key="legalDesc">Datenschutz &amp; Impressum</i18n:text>
@@ -114,7 +114,7 @@
                         </h2>
                         <div style="padding-bottom:3em;">
                             <h3>
-                                <a data-template="config:langSources"/>
+                                <a data-template="gui:langSources"/>
                             </h3>
                         </div>
                     </div>
