--- a/participants.html
+++ b/participants.html
@@ -5,21 +5,21 @@
                 <h2 style="margin-top: 3%" class="hidden-md hidden-sm hidden-xs">
                     <span class="text-muted">
                         <i class="fas fa-users" aria-hidden="true"/>
-                        <span data-template="config:participantsTitle"/>
+                        <span data-template="gui:participantsTitle"/>
                     </span>
                     <hr/>
                 </h2>
                 <h2 style="margin-top: 2%" class="hidden-lg hidden-sm hidden-xs">
                     <span class="text-muted">
                         <i class="fas fa-users" aria-hidden="true"/>
-                        <span data-template="config:participantsTitle"/>
+                        <span data-template="gui:participantsTitle"/>
                     </span>
                     <hr/>
                 </h2>
                 <h2 class="hidden-lg hidden-md">
                     <span class="text-muted">
                         <i class="fas fa-users" aria-hidden="true"/>
-                        <span data-template="config:participantsTitle"/>
+                        <span data-template="gui:participantsTitle"/>
                     </span>
                     <hr/>
                 </h2>
