Create stats via admin interface

--- a/admin.html
+++ b/admin.html
@@ -46,6 +46,9 @@
             <p>
                 <span data-template="admin:needsTxtCorpusZip">boing</span>
             </p>
+            <p>
+                <span data-template="admin:needsStats">boing</span>
+            </p>
         </div>
         
         <div class="row" data-template="app:loadListOfAuthors">
