Make image responsive

--- a/dictionary.html
+++ b/dictionary.html
@@ -49,7 +49,7 @@
                 </script>-->
             </div>
             <div class="col-md-9">
-                <img src="resources/img/slider/dict.jpg"/><p class="lead"/>
+                <img src="resources/img/slider/dict.jpg" style="width:100%"/><p class="lead"/>
                 <p class="lead" style="text-align: justify">
                     <i18n:text key="dictUnderConstruction">Hier entsteht das Wörterbuch der juristisch-politischen Sprache der Schule von Salamanca: ca. 200 Artikel mit lateinischen und spanischen Lemmata, den Quellen selbst entnommen. 
                         Die Artikel werden voraussichtlich ab 2019 sukzessive veröffentlicht.</i18n:text>
