Show basic corpus stats in works overview

--- a/works.html
+++ b/works.html
@@ -32,6 +32,11 @@
                         <div style="margin-top: -13%;" data-template="app:sortWRK"/>
                     </noscript>
                     <div class="corpus-download">
+                        <h4>
+                            <i18n:text key="aboutCorpus">About the Corpus</i18n:text>
+                        </h4>
+                        <span data-template="app:corpusStatsTeaser"/>
+                        <hr/>
                         <span data-template="app:WRKsCorpusDownload"/>
                         <hr/>
                         <span data-template="app:WRKsList"/>
